--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,15 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
 
-<a href="/check"><button> CLICK TO PAY </button></a>
+    <h1>welcome buy now</h1>
 
+   <a href="/pay"> <button>BUY</button></a>
+    
 </body>
-
 </html>
