--- a/views/pay.ejs
+++ b/views/pay.ejs
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-
-    <form action="/pay" method="post">
+    <h1>buys our gifts</h1>
+    <form action="/payment" method="post">
         <script
             src="//checkout.stripe.com/v2/checkout.js"
             class="stripe-button"
